@@ -31,17 +31,9 @@ proc board_info { machine op args } {
     }
     if { $op == "exists" } {
 	if { [llength $args] == 0 } {
-	    if {[info exists board_info($machine,name)]} {
-		return 1
-	    } else {
-		return 0
-	    }
+	    return [info exists board_info($machine,name)]
 	} else {
-	    if {[info exists "board_info($machine,[lindex $args 0])"]} {
-		return 1
-	    } else {
-		return 0
-	    }
+	    return [info exists "board_info($machine,[lindex $args 0])"]
 	}
     }
     if { [llength $args] == 0 } {
